OpenMPT - Full Version History
------------------------------

[Fix]: bug fix
[New]: new feature
[Imp]: Improvement
[Reg]: known issue / regression
[Mod]: change
[Var]: other
(tx XYZ): thanks to XYZ for telling us about the bug

Changes from revisions [476, 604]
---------------------------------

General tab
  [Imp] <Jojo> Disabled tempo slider for MOD files (it was just confusing)
  [Imp] <Jojo> Disabled global volume slider for MOD files, instead enabled the sample pre-amp slider (so it is also possible to make output louder)
  [Imp] <Jojo> The "output to" dropdown list also shows the actual plugin name (instead of just the library name) now.
  [Fix] <Jojo> Moving a plugin in MOD/S3M files doesn't mark them as modified anymore. The channel fx dropdown lists are now also disabled for those module types.
  [Fix] <Jojo> The restart position edit control is disabled for S3M files.
  [Fix] <coda> The background colour of the tabs in the channel configuration is now also correct when using WinXP Luna or Vista/Win7 Aero.
  
Sequence editor
  [New] <Jojo> "Select All" shortcut also works here now.
  [Imp] <Jojo> Sequence menu also allows to insert empty sequences now.

Pattern tab::pattern editing
  [New] <Jojo> Extended context menu for PC Notes
  [New] <Jojo> Key shortcut + context menu entry for toggling the plugin editor of the PC note that's under the cursor.
  [Imp] <Jojo> Overflow paste now only uses one undo step.
  [Imp] <Jojo> Instead of simply ignoring note off/cut/fade when working with .MOD files, it is converted to C00.
  [Fix] <rewbs> Effect visualizer is now aware of PC notes (bug 3836).
  [Fix] <Jojo> When using MIDI record or split keyboard settings, volume data was writting into the volume column in MOD format.
  [Fix] <Jojo> When converting PC Notes to MIDI Macros, the instrument index is now also cleaned as well. Noticable for example when pasting PC notes into an IT module.
  [Fix] <Jojo> Now, plugin slot 100 can also be automated using PC Notes.